<resources>
    <string name="app_name">LibraryApp</string>
    <string name="library_management_app">Library Management App</string>
    <string name="staff_login">Staff Login</string>
    <string name="member_login">Member Login</string>
    <string name="password">Password:</string>
    <string name="username_email">Username/Email:</string>
    <string name="password_hint">Enter Password</string>
    <string name="email_hint">Enter Username/Email</string>
    <string name="staff_dashboard">Staff Dashboard</string>
    <string name="view_members">View Members</string>
    <string name="manage_books">Manage Books</string>
    <string name="approve_requests">Approve Requests</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="member_dashboard">Member Dashboard</string>
    <string name="my_profile">My Profile</string>
    <string name="browse_books">Browse Books</string>
    <string name="my_requests">My Requests</string>
    <string name="manage_members">Manage Members</string>
    <string name="add_new_member">Add New Member</string>
    <string name="search_members">Search Members</string>
    <string name="add_new_book">Add New Book</string>
    <string name="search_books">Search books</string>
    <string name="requests">Requests</string>
    <string name="view_edit_member">View/Edit Member</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="contact">Contact:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="e_g_smith">e.g Smith</string>
    <string name="e_g_john">e.g John</string>
    <string name="e_g_john_smith_gmail_com">e.g john.smith@gmail.com</string>
    <string name="e_g_0123456789">e.g 0123456789</string>
    <string name="title">Title</string>
    <string name="quantity">Quantity:</string>
    <string name="e_g_lord_of_the_rings">e.g Lord of the Rings</string>
    <string name="turn_notifications_on">Turn Notifications On</string>
    <string name="sign_out">Sign Out</string>
    <string name="memberenddate_placeholder">MemberEndDate: PlaceHolder</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="request_book">Request Book</string>
    <string name="status_placeholder">Status: Placeholder</string>
    <string name="title_placeholder">Title: Placeholder</string>
    <string name="view_book">View Book</string>
    <string name="edit_book">Edit Book</string>
    <string name="e_g_9">e.g 9</string>
    <string name="view_books">View Books</string>
    <string name="my_books">My Books</string>
    <string name="usernames_books">Usernames Books</string>
    <string name="membership_end_date">Membership End Date:</string>
    <string name="error_loading_profile">Error loading profile</string>
    <string name="item_title">Book Title</string>
    <string name="item_quantity">Quantity: 0</string>
    <string name="item_status">Status: Available</string>
    <string name="item_edit_button">Edit</string>
    <string name="back">←</string>
    <string name="enter_book_title">Enter Book Title</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="book_title">Book Title</string>
    <string name="member_name">Member name</string>
    <string name="request_date">Request Date</string>
    <string name="notification_title">Notification Title</string>
    <string name="_2_hours_ago">2 hours ago</string>
    <string name="notification_content_goes_here_placeholder">Notification content goes here, placeholder</string>
    <string name="membership_end_dateedit">"Membership End Date: "</string>
</resources>