<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE8D0"
    tools:context=".EditBook">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="#ADD8E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEditBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"

        android:text="@string/edit_book"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints="book"
        app:layout_constraintWidth_max="350dp"
        android:hint="@string/e_g_lord_of_the_rings"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="40dp"
        android:background="@color/grey"
        android:ems="10"


        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/textViewFirstNameProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewFirstNameProfile"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="0dp"
        android:hint="@string/e_g_9"
        android:layout_height="48dp"
        android:background="@color/grey"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:autofillHints="quantity"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLastNameProfile"
        app:layout_constraintEnd_toEndOf="@+id/editTextFirstName"
        app:layout_constraintStart_toEndOf="@+id/textViewLastNameProfile"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstName"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonDeleteMember"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        android:text="@string/delete"
        android:background="@drawable/deletebutton"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancelMember"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonSaveMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_button"
        android:textSize="20sp"
        android:text="@string/save"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancelMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginEnd="30dp"
        android:background="@drawable/cancel"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewFirstNameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="69dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textViewLastNameProfile"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="@+id/textViewFirstNameProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstNameProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>