<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE8D0"
    tools:context=".MyProfile">


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="#ADD8E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMyRequestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"

        android:text="@string/my_profile"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintWidth_max="400dp"

        />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNotif"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintWidth_max="300dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/turn_notifications_on"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/view2"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textViewMemberEndDate">
    </androidx.appcompat.widget.SwitchCompat>
    <Button
        android:id="@+id/buttonSaveMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_button"
        android:textSize="20sp"
        android:text="@string/edit_profile"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintStart_toStartOf="@id/view2" />

    <Button
        android:id="@+id/buttonSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:layout_marginEnd="30dp"
        android:background="@drawable/deletebutton"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="@id/view2" />

    <TextView
        android:id="@+id/textViewFirstNameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="69dp"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textViewLastNameProfile"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintStart_toStartOf="@+id/textViewFirstNameProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstNameProfile" />

    <TextView
        android:id="@+id/textViewEmailProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/textViewLastNameProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastNameProfile" />


    <TextView
        android:id="@+id/textViewContactProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="30dp"

        android:text="@string/contact"
        app:layout_constraintStart_toStartOf="@+id/textViewEmailProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailProfile" />


    <TextView
        android:id="@+id/textViewMemberEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/membership_end_date"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textViewContactProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewContactProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>