<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE8D0"
    tools:context=".StaffDashboard">


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="#ADD8E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStaffDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"

        android:layout_marginTop="25dp"
        android:text="@string/staff_dashboard"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <Button
        android:id="@+id/buttonViewMembers"
        android:layout_width="0dp"
        android:background="@drawable/main_button"
        android:layout_height="wrap_content"
        android:text="@string/view_members"
        android:layout_marginBottom="40dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonManageBooks"
        app:layout_constraintEnd_toEndOf="@+id/buttonApproveRequests"
        app:layout_constraintStart_toStartOf="@+id/buttonApproveRequests" />

    <Button
        android:id="@+id/buttonManageBooks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/manage_books"
        android:background="@drawable/main_button"
        android:textSize="25sp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonApproveRequests"
        app:layout_constraintEnd_toEndOf="@+id/buttonApproveRequests"
        app:layout_constraintStart_toStartOf="@+id/buttonApproveRequests" />

    <Button
        android:id="@+id/buttonApproveRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approve_requests"
        android:textSize="25sp"
        android:background="@drawable/main_button"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNotifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNotifications"
        android:layout_width="0dp"
        android:background="@drawable/main_button"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/notifications"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSettings"
        app:layout_constraintEnd_toEndOf="@+id/buttonApproveRequests"
        app:layout_constraintStart_toStartOf="@+id/buttonApproveRequests" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="25sp"
        android:background="@drawable/main_button"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonApproveRequests"
        app:layout_constraintStart_toStartOf="@+id/buttonApproveRequests" />


</androidx.constraintlayout.widget.ConstraintLayout>